# LLM-Document-Analyzer

./: .gitignore  .secrets.example  LICENSE  README.md  SECURITY.md  SECURITY_CHECKLIST.md  enhanced_examples.py  pyproject.toml  requirements.txt  verify_setup.py
.github/: copilot-instructions.md
docs/: API.md  LANGCHAIN_GUIDE.md
src/: __init__.py  analyzer.py  cli.py  document_processor.py  embeddings.py  enhanced_analyzer.py  enhanced_cli.py  gemini_client.py  hybrid_analyzer.py  langchain_cli.py  langchain_integration.py  models.py  secure_config.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_langchain_integration.py
